[package]
name = "gazette"
version = "0.1.3"
edition = "2021"
authors = ["Geir Isene <g@isene.com>"]
description = "Terminal reader for your personal daily news digest. Part of the Fe2O3 Rust terminal suite."
license = "Unlicense"
repository = "https://github.com/isene/gazette"

[dependencies]
crust = { version = "0.1", path = "../crust", package = "fe2o3-crust" }

[profile.release]
opt-level = 3
lto = true
strip = true
